# shallow-water

./: CMakeLists.txt  Camera.cpp  Camera.hpp  README.md  Shader.cpp  Shader.hpp  generator.py  height.txt  main.cpp  render.cpp  render.hpp  solver.cpp  solver.hpp  surface.txt
input/: height.txt  surface.txt
